--- a/index.html
+++ b/index.html
@@ -303,25 +303,6 @@ q:before, q:after {
         </table>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2015.03 ~ 2015.06 大数据项目</td>
-          </tr>
-          <tr>
-            <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">利用实验室10台PC电脑进行Master，slave的环境搭建，每周例会研究算法，主讲过Kmeans聚类算法的优化。</td>
-          </tr>
-          <tr>
-            <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content"> Hadoop、mapReduce、hive</td>
-          </tr>
-          <tr>
-            <td class="project-sub-title" valign="top">项目收获:</td>
-            <td class="item-content">
-              了解大数据分布式系统，对数据的并行处理，以及某些算法的优化，提升效率。
-            </td>
-          </tr>
-        </table>
-        <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
-          <tr>
             <td colspan="2" class="project-title">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
           </tr>
           <tr>
@@ -343,17 +324,24 @@ q:before, q:after {
             <td class="item-content">
               参与了项目需求分析，数据设计及代码编写与测试工作，
               使用框架SpringMvc，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，
-              上传文件包括pdf，照片，txt等格式，级联删除，增加，二维码的创建，实现一品一码，扫描显示产品详情
+              上传文件包括pdf，照片，txt等格式，级联删除，增加，二维码的创建，实现一品一码，通过扫描可显示产品详情
             </td>
           </tr>
         </table>
         <table style="margin-bottom:10px;">
           <tr>
-            <td colspan="2" class="project-title">2014.09 ~ 2014.12 轻博客网站</td>
+            <td colspan="2" class="project-title">2014.09 ~ 2014.12 圈圈轻博客</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
-            <td class="item-content">担任组长一职,数据库设计,构建产品ER图，运用ssh三大框架,我做的主要是用户模块,包括用户权限,管理员和普通用户的跳转,以及模板的选择不同博主进入的页面不同.，运用struts实现跳转不同模板的页面，再就是页面交互，增删改查。</td>
+            <td class="item-content">
+              该项目主要包含“用户管理”、“发布博客”、“标签栏”、“推荐栏”四大模块，
+              “用户管理”模块用户可以管理自己的个人信息及4种博主界面模板的切换，
+              “发布博客”模块用户可以发布图片博客并添加相关文字描述，
+              “标签栏”下属各种标签，具备按标签搜索其他博主博客的功能，
+              “推荐”推荐一些热度较高的博主博客信息，
+               还包括基本的“点赞”、“热度”、“评论”，等功能的实现
+            </td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
@@ -362,7 +350,10 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              通过了解、挖掘用户需求、设计系统、实现系统的流程，培养了做产品的责任心及需求获取、分析能力，程序设计能力。在开发过程中了解HTTP协议，熟悉HTML、CSS、JavaScript等。
+              担任组长，参与了项目需求分析，数据设计，构建产品ER图及代码编写与测试工作，小组7人独立完成项目开发，
+              本人担任“用户管理”，“标签搜索”模块功能的设计编写，
+              设计此网站的目的参与了项目需求分析，数据设计及代码编写与测试工作，是因为轻博客介于博客和微博之间，
+              突破微博140字数的限制，以图片及文字的完美搭配，简洁大方的格式吸引大众。
             </td>
           </tr>
         </table>
