--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              担任组长，参与了项目需求分析，数据设计，构建产品ER图及代码编写与测试工作，小组7人独立完成项目开发，
+              担任组长，参与了项目需求分析，数据库设计，构建产品ER图及代码编写与测试工作，小组7人独立完成项目开发，
               本人担任“用户管理”，“标签搜索”模块功能的设计编写，
-              设计此网站的目的参与了项目需求分析，数据设计及代码编写与测试工作，是因为轻博客介于博客和微博之间，
+              设计此网站的目的是因为轻博客介于博客和微博之间，
               突破微博140字数的限制，以图片及文字的完美搭配，简洁大方的格式吸引大众。
             </td>
           </tr>
