--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，UI升级，struts输入验证，拦截器的处理，Payment模块JS、jQuery性能调优。
+             该项目主要分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块
             </td>
           </tr>
           <tr>
@@ -293,6 +293,10 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
+              公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，
+              UI升级，
+              struts输入验证，
+              拦截器的处理，Payment模块JS、jQuery性能调优。
               通过在甲骨文实习工作一年，了解并深入甲骨文Siebel Team项目（Billing Insight）的相关逻辑，
               包括项目中企业框架struts，spring的相关应用，通过对首页JSP结构的重新调整及UI的重新设计
               ，使产品首页在易用性得到极大提高，对JavaScript和CSS代码重写，提高的程序运行效率及浏览器兼容性
@@ -351,7 +355,7 @@ q:before, q:after {
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
               担任组长，参与了项目需求分析，数据库设计，构建产品ER图及代码编写与测试工作，小组7人独立完成项目开发，
-              本人担任“用户管理”，“标签搜索”模块功能的设计编写，
+              本人担任“用户管理”，“标签搜索”模块功能的设计及代码编写，
               设计此网站的目的是因为轻博客介于博客和微博之间，
               突破微博140字数的限制，以图片及文字的完美搭配，简洁大方的格式吸引大众。
             </td>
