--- a/index.html
+++ b/index.html
@@ -283,7 +283,12 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             该项目主要分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块
+             该项目主要分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块,
+             “Dashboard”展示账户花费趋势、预算及账户付款记录等，“Unbilled”账户相关数据使用记录，
+             “Statement”相关服务详细清单等，
+             “My Account”展示各类report信息，
+             “Payment”完成相关账户支付功能，“Hierarchy”可构建个人或公司组织群体，
+             “My Account”账户和个人或公司信息。
             </td>
           </tr>
           <tr>
@@ -293,15 +298,11 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
             <td class="item-content">
-              公司产品（Oracle Billing Insight）,负责payment module后端模块的维护及前端页面的设计，action控制器调优，
-              UI升级，
-              struts输入验证，
-              拦截器的处理，Payment模块JS、jQuery性能调优。
               通过在甲骨文实习工作一年，了解并深入甲骨文Siebel Team项目（Billing Insight）的相关逻辑，
               包括项目中企业框架struts，spring的相关应用，通过对首页JSP结构的重新调整及UI的重新设计
               ，使产品首页在易用性得到极大提高，对JavaScript和CSS代码重写，提高的程序运行效率及浏览器兼容性
-              。对JavaScript最佳实践及面向对象可复用设计有了深入了解，熟悉了CSS定位及布局知识，熟练使用jQuery，
-              对浏览器兼容性问题有了深刻认识。
+              。完成“Payment”模块相关功能开发，包括struts配置，action调用，字段输入验证，拦截器处理等
+              平时日常工作负责debug各个模块出现的bug，对自己编码能力有很大提升。
             </td>
           </tr>
         </table>
