--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@ q:before, q:after {
               通过在甲骨文实习工作一年，了解并深入甲骨文Siebel Team项目（Billing Insight）的相关逻辑，
               包括项目中企业框架struts，spring的相关应用，通过对首页JSP结构的重新调整及UI的重新设计
               ，使产品首页在易用性得到极大提高，对JavaScript和CSS代码重写，提高的程序运行效率及浏览器兼容性
-              。完成“Payment”模块相关功能开发，包括struts配置，action调用，字段输入验证，拦截器处理等
-              平时日常工作负责debug各个模块出现的bug，对自己编码能力有很大提升。
+              。完成“Payment”模块相关功能开发，包括struts配置，action调用，字段输入验证，拦截器处理等，
+              平时日常工作负责debug各个模块出现的bug，对自己分析并解决问题的能力有很大提升。
             </td>
           </tr>
         </table>
