--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ q:before, q:after {
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">使用技术:</td>
-            <td class="item-content">Struts、Spring、JavaScript、CSS、Ajax、jQuery、velocity</td>
+            <td class="item-content">Struts2、Spring、JavaScript、CSS、Ajax、jQuery、velocity、jsp</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目收获:</td>
