--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ q:before, q:after {
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
              该项目主要分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块,
-             “Dashboard”展示账户花费趋势、预算及账户付款记录等，“Unbilled”账户相关数据使用记录，
+             “Dashboard”展示账户花费趋势、预算及账户付款记录，“Unbilled”账户相关数据使用记录，
              “Statement”相关服务详细清单等，
              “My Account”展示各类report信息，
              “Payment”完成相关账户支付功能，“Hierarchy”可构建个人或公司组织群体，
