--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@ q:before, q:after {
           <li>2010.09~2011.06:优秀团干、三好学生、院一等奖学金</li>
           <li>2011.09~2012.06:国家励志奖学金</li>
           <li>2012.09~2013.06:湘南学院" 优秀毕业生"(top5%)</li>
-          <li>2014.09~2015.06:中南大学"优秀研究生"（top5%），中软国际圈圈轻博客"优秀团队"及“优秀个人”</li>
+          <li>2014.09~2015.06:中软国际圈圈轻博客"优秀团队"及“优秀个人”</li>
+          <li>2015.06~2016.09:中南大学"优秀研究生"</li>
         </ul>
       </section>
     </section>
