--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ q:before, q:after {
         <span class="item-title-hl">兴趣爱好</span>
       </section>
       <section class="item-box-right">
-        看书、音乐，分享知识、篮球
+        逛博客、github等相关技术平台分享、篮球
       </section>
     </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
