--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ q:before, q:after {
             <td style="width:150px;">2014.09~2017.06</td>
             <td style="width:250px;">中南大学（985工程）</td>
             <td style="width:300px;">软件工程</td>
-            <td style="width:350px;">硕士学位</td>
+            <td style="width:350px;">硕士在读</td>
           </tr>
         </table>
         <table>
