--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ q:before, q:after {
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
-          <td class="item-content">13161231694</td>
+          <td class="item-content">131-6123-1694</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
             <a title="给我发邮件" href="mailto:648901734@qq.comm">648901734@qq.com</a>
@@ -198,13 +198,7 @@ q:before, q:after {
           <td class="item-title">性别：</td>
           <td class="item-content">男</td>
           <td class="item-title">出生日期：</td>
-          <td class="item-content">1990.11</td>
-        </tr>
-        <tr>
-          <td class="item-title">博客:</td>
-          <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="http://www.cnblogs.com/bb3q/" target="_blank">http://www.cnblogs.com/bb3q/</a>
-          </td>
+          <td class="item-content">1990年11月15日</td>
         </tr>
          </table>
          <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:115px;   HEIGHT:135px; width:12%;">
