--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
     }
     .item-title-hl{
       font-size:20px;
+      font-weight:900;
       padding:4px;
       color: blue; 
-      border-bottom:solid 2px #ccc;
+     
       font-family:Georgia;
     }
     .project-title{
