--- a/index.html
+++ b/index.html
@@ -258,22 +258,10 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td style="padding:8px 0px; width:150px;">2015.06~2016.07</td>
-            <td style="padding:8px 0px; width:250px;">北京甲骨文股份有限公司</td>
-            <td>java后端开发实习生</td>
-          </tr>
-        </table>
-      </section>
-    </section>
-    <section class="item-wrap">
-      <section class="item-box-left">
-        <span class="item-title-hl">项目经验</span>
-      </section>
-      <section class="item-box-right">
-        <section>
-        <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
-          <tr>
-            <td colspan="2" class="project-title"><strong>2015.06 ~ 2016.07 Oracle Billing Insight</strong></td>
+            <td style="padding:8px 0px; width:150px;font-weight:900;">2015.06~2016.07</td>
+            <td style="padding:8px 0px; width:250px;font-weight:900;">北京甲骨文股份有限公司</td>
+            <td style="padding:8px 0px; width:300px;font-weight:900;">Seibel研发部</td>
+            <td style="padding:8px 0px; width:350px;font-weight:900;">java后端工程师</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
@@ -298,6 +286,15 @@ q:before, q:after {
             </td>
           </tr>
         </table>
+        </table>
+      </section>
+    </section>
+    <section class="item-wrap">
+      <section class="item-box-left">
+        <span class="item-title-hl">项目经验</span>
+      </section>
+      <section class="item-box-right">
+        <section>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
             <td colspan="2" class="project-title">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
