--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@ q:before, q:after {
             <td style="padding:8px 0px; width:300px;font-weight:900;">Seibel研发部</td>
             <td style="padding:8px 0px; width:350px;font-weight:900;">java后端工程师</td>
           </tr>
+       </table>
+      <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
@@ -284,6 +286,7 @@ q:before, q:after {
             </td>
           </tr>
         </table>
+      </section>
     </section>
     <section class="item-wrap">
       <section class="item-box-left">
