--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td style="padding:8px 0px; width:150px;font-weight:900;">2015.06~2016.07</td>
-            <td style="padding:8px 0px; width:250px;font-weight:900;">北京甲骨文股份有限公司</td>
-            <td style="padding:8px 0px; width:350px;font-weight:900;">Seibel研发部</td>
-            <td style="padding:8px 0px; width:450px;font-weight:900;">java后端工程师</td>
+            <td style="padding:2px 0px; width:150px;font-weight:900;">2015.06~2016.07</td>
+            <td style="padding:2px 0px; width:250px;font-weight:900;">北京甲骨文股份有限公司</td>
+            <td style="padding:2px 0px; width:350px;font-weight:900;">Seibel研发部</td>
+            <td style="padding:2px 0px; width:450px;font-weight:900;">java后端工程师</td>
           </tr>
        </table>
-      <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
+      <table style="margin-bottom:10px; ">
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
@@ -296,7 +296,7 @@ q:before, q:after {
         <section>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
+            <td colspan="2" class="project-title" font-weight:"900">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
@@ -323,7 +323,7 @@ q:before, q:after {
         </table>
         <table style="margin-bottom:10px;">
           <tr>
-            <td colspan="2" class="project-title">2014.09 ~ 2014.12 圈圈轻博客</td>
+            <td colspan="2" class="project-title" font-weight:"900">2014.09 ~ 2014.12 圈圈轻博客</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
