--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@ q:before, q:after {
 </head>
 <body style="margin:0px auto;width:800px;">
   <header>
-    <h1 style="color:#e8e8e8; font-size: 60px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:2px;">赵立波</h1>
-    <section style="padding:6px 0px;">
+    <h1 style="color:#e8e8e8; font-size: 50px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666;">赵立波</h1>
+    <section style="padding:2px 0px;">
       <hr/>
     </section>
   </header>
-  <article style="padding:10px 0px;">
+  <article style="padding:6px 0px;">
     <section>
       <table style="width:100%">
         <tr>
@@ -200,7 +200,7 @@ q:before, q:after {
           <td class="item-content">1990年11月15日</td>
         </tr>
          </table>
-         <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:115px;   HEIGHT:135px; width:12%;">
+         <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:90px;   HEIGHT:135px; width:12%;">
         <img src="images/zlb.png" width="105px" height="130px" />
         </div>
       </section>
