--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ q:before, q:after {
         <section>
         <table style="margin-bottom:10px; border-bottom:dashed 1px #ccc;">
           <tr>
-            <td colspan="2" class="project-title" font-weight:"900">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
+            <td colspan="2" class="project-title" style="font-weight:900">2015.01 ~ 2015.06 中国林业产业诚信平台</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
@@ -323,7 +323,7 @@ q:before, q:after {
         </table>
         <table style="margin-bottom:10px;">
           <tr>
-            <td colspan="2" class="project-title" font-weight:"900">2014.09 ~ 2014.12 圈圈轻博客</td>
+            <td colspan="2" class="project-title" style="font-weight:900">2014.09 ~ 2014.12 圈圈轻博客</td>
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
