--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     .item-title-hl{
       font-size:20px;
       font-weight:900;
-      padding:4px;
+      padding:2px;
       font-family:Georgia;
     }
     .project-title{
@@ -258,8 +258,8 @@ q:before, q:after {
           <tr>
             <td style="padding:2px 0px; width:150px;font-weight:900;">2015.06~2016.07</td>
             <td style="padding:2px 0px; width:400px;font-weight:900;">北京甲骨文股份有限公司</td>
-            <td style="padding:2px 0px; width:350px;font-weight:900;">Seibel研发部</td>
-            <td style="padding:2px 0px; width:350px;font-weight:900;">java后端工程师</td>
+            <td style="padding:2px 0px; width:400px;font-weight:900;">&nbsp&nbspSeibel研发部</td>
+            <td style="padding:2px 0px; width:400px;font-weight:900;">java后端工程师</td>
           </tr>
        </table>
       <table style="margin-bottom:10px; ">
