--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       padding:7px 0px;
     }
     li::before{
-         
+      content:url(images/icons/Button-Check-01.png);    
       padding-right:6px;
       vertical-align: middle;
     }
@@ -51,7 +51,6 @@
     .project-title{
       font-size:20px;
       line-height: 1.8;
-      padding:2px;
       font-weight: 900；
     }
     .project-sub-title{
