--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td style="padding:2px 0px; width:150px;font-weight:900;">2015.06~2016.07</td>
-            <td style="padding:2px 0px; width:400px;font-weight:900;">北京甲骨文股份有限公司</td>
-            <td style="padding:2px 0px; width:400px;font-weight:900;">&nbsp&nbspSeibel研发部</td>
-            <td style="padding:2px 0px; width:400px;font-weight:900;">java后端工程师</td>
+            <td style="padding:2px 0px; class="project-title" width:150px;font-weight:900;">2015.06~2016.07</td>
+            <td style="padding:2px 0px; class="project-title" width:400px;font-weight:900;">北京甲骨文股份有限公司</td>
+            <td style="padding:2px 0px; class="project-title" width:400px;font-weight:900;">&nbsp&nbspSeibel研发部</td>
+            <td style="padding:2px 0px; class="project-title" width:400px;font-weight:900;">java后端工程师</td>
           </tr>
        </table>
       <table style="margin-bottom:10px; ">
