--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       width:100px;
       padding:4px;
       line-height: 1.8;
+      font-weight:900;
     }
     .item-content{
       padding:4px;
@@ -256,10 +257,10 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td  style="padding:2px 0px;width:150px;font-weight:900;font-size:10px;">2015.06~2016.07</td>
-            <td  style="padding:2px 0px;width:400px;font-weight:900;font-size:10px;">&nbsp&nbsp北京甲骨文股份有限公司</td>
-            <td  style="padding:2px 0px;width:300px;font-weight:900;font-size:10px;">&nbsp&nbspSeibel研发部</td>
-            <td  style="padding:2px 0px;width:300px;font-weight:900;font-size:10px;">java后端工程师</td>
+            <td  style="padding:2px 0px;width:150px;font-weight:900;">2015.06~2016.07</td>
+            <td  style="padding:2px 0px;width:400px;font-weight:900;">&nbsp&nbsp北京甲骨文股份有限公司</td>
+            <td  style="padding:2px 0px;width:300px;font-weight:900;">&nbsp&nbspSeibel研发部</td>
+            <td  style="padding:2px 0px;width:300px;font-weight:900;">java后端工程师</td>
           </tr>
        </table>
       <table style="margin-bottom:10px; ">
