--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .item-content{
       padding:4px;
       line-height: 1.8;
-      font-weight:900;
+     
     }
     li{
       padding:7px 0px;
@@ -235,18 +235,18 @@ q:before, q:after {
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;">2014.09~2017.06</td>
-            <td style="width:250px;">中南大学（985工程）</td>
-            <td style="width:300px;">软件工程</td>
-            <td style="width:350px;">硕士在读</td>
+            <td style="width:150px;font-weight:900;">2014.09~2017.06</td>
+            <td style="width:250px;font-weight:900;">中南大学（985工程）</td>
+            <td style="width:300px;font-weight:900;">软件工程</td>
+            <td style="width:350px;font-weight:900;">硕士在读</td>
           </tr>
         </table>
         <table>
           <tr>
-            <td style="width:150px;">2009.09~2013.06</td>
-            <td style="width:250px;">湘南学院</td>
-            <td style="width:300px;">&nbsp&nbsp电气工程自动化</td>
-            <td style="width:350px;">&nbsp学士学位</td>
+            <td style="width:150px;font-weight:900;">2009.09~2013.06</td>
+            <td style="width:250px;font-weight:900;">湘南学院</td>
+            <td style="width:300px;font-weight:900;">&nbsp&nbsp电气工程自动化</td>
+            <td style="width:350px;font-weight:900;">&nbsp学士学位</td>
           </tr>
         </table>
       </section>
