--- a/index.html
+++ b/index.html
@@ -191,9 +191,7 @@ q:before, q:after {
           <td class="item-title">电话号码：</td>
           <td class="item-content">131-6123-1694</td>
           <td class="item-title">邮箱：</td>
-          <td class="item-content">
-            <a title="给我发邮件" href="mailto:648901734@qq.comm">648901734@qq.com</a>
-          </td>
+          <td class="item-content">648901734@qq.com</td>
         </tr>
         <tr>
           <td class="item-title">性别：</td>
@@ -203,7 +201,7 @@ q:before, q:after {
         </tr>
          </table>
          <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:75px;   HEIGHT:110px; width:12%;">
-        <img src="images/zlb.png" width="105px" height="130px" />
+        <img src="images/zlb.png" width="105px" height="100px" />
         </div>
       </section>
 
