--- a/index.html
+++ b/index.html
@@ -233,16 +233,18 @@ q:before, q:after {
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;font-weight:900;">2014.09~2017.06</td>
-            <td style="width:250px;font-weight:900;">中南大学（985工程）</td>
-            <td style="width:300px;font-weight:900;">软件工程</td>
-            <td style="width:350px;font-weight:900;">硕士在读</td>
+            <td style="width:150px;font-weight:500;">2014.09~2017.06</td>
+            <td style="width:250px;font-weight:500;">中南大学（985工程）</td>
+            <td style="width:300px;font-weight:500;">软件工程</td>
+            <td style="width:350px;font-weight:500;">硕士在读</td>
           </tr>
+        </table>
+        <table>
           <tr>
-            <td style="width:150px;font-weight:900;">2009.09~2013.06</td>
-            <td style="width:250px;font-weight:900;">湘南学院</td>
-            <td style="width:300px;font-weight:900;">&nbsp&nbsp电气工程自动化</td>
-            <td style="width:350px;font-weight:900;">&nbsp学士学位</td>
+            <td style="width:150px;font-weight:500;">2009.09~2013.06</td>
+            <td style="width:250px;font-weight:500;">湘南学院</td>
+            <td style="width:300px;font-weight:500;">&nbsp&nbsp电气工程自动化</td>
+            <td style="width:350px;font-weight:500;">&nbsp学士学位</td>
           </tr>
         </table>
       </section>
