--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@ q:before, q:after {
   </style>
   <script type="text/javascript" src="js/jquery.js"></script>
 </head>
-<body style="margin:0px auto;width:800px;">
+<body style="margin:0px auto;width:800px; border-bottom:dashed 1px #ccc;">
   <header>
     <h1 style="color:#e8e8e8; font-size: 50px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666;">赵立波</h1>
-    <section style="padding:10px 0px;">
+    <section style="padding:2px 0px;">
       <hr/>
     </section>
   </header>
@@ -201,7 +201,7 @@ q:before, q:after {
         </tr>
          </table>
          <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:75px;   HEIGHT:110px; width:12%;">
-        <img src="images/zlb.png" width="105px" height="125px" />
+        <img src="images/zlb.png" width="105px" height="120px" />
         </div>
       </section>
 
