--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       font-size:20px;
       font-weight:500;
       padding:2px;
+      border-bottom:solid 2px #ccc;
       font-family:Georgia;
     }
     .project-title{
