--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
   { 
   background-color: rgb(240,240,240);
   }
-
-
     .item-title{
       width:100px;
       padding:4px;
       line-height: 1.8;
-      font-weight:500;
     }
     .item-content{
       padding:4px;
       line-height: 1.8;
-     
     }
     li{
       padding:7px 0px;
@@ -33,7 +29,7 @@
       display:-moz-box;
       display:-webkit-box;
       display:box;
-      padding:2px 0px;
+      padding:6px 0px;
       border-bottom:solid 1px #aaa;
       margin-bottom:6px;
       width: 100%;
@@ -46,21 +42,21 @@
     }
     .item-title-hl{
       font-size:20px;
-      font-weight:500;
-      padding:2px;
+      padding:4px;
+      color: blue; 
       border-bottom:solid 2px #ccc;
       font-family:Georgia;
     }
     .project-title{
       font-size:20px;
       line-height: 1.8;
-      font-weight:500；
+      padding:2px;
+      font-weight: 900；
     }
     .project-sub-title{
       padding:4px;
       line-height: 1.8;
       width:70px;
-      font-weight:500;
     }
     #goTop{
       position:fixed;
@@ -98,7 +94,6 @@
     font-family:"Segoe UI","Times New Roman",Georgia,Serif;;
     font-size: 14px;
 }
-
 body, div, dl, dt, dd, ul, ol, li,
 h1, h2, h3, h4, h5, h6, pre, code,
 form, fieldset, legend, input, button,
@@ -168,18 +163,17 @@ q:before, q:after {
     content: '';
     content: none;
 }
-
   </style>
   <script type="text/javascript" src="js/jquery.js"></script>
 </head>
-<body style="margin:0px auto;width:800px; border-bottom:dashed 1px #ccc;">
+<body style="margin:0px auto;width:800px;">
   <header>
-    <h1 style="color:#e8e8e8; font-size: 50px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666;">赵立波</h1>
-    <section style="padding:2px 0px;">
+    <h1 style="color:#e8e8e8; font-size: 60px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:2px;">赵立波</h1>
+    <section style="padding:6px 0px;">
       <hr/>
     </section>
   </header>
-  <article style="padding:6px 0px;">
+  <article style="padding:10px 0px;">
     <section>
       <table style="width:100%">
         <tr>
@@ -190,19 +184,27 @@ q:before, q:after {
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
-          <td class="item-content">131-6123-1694</td>
+          <td class="item-content">13161231694</td>
           <td class="item-title">邮箱：</td>
-          <td class="item-content">648901734@qq.com</td>
+          <td class="item-content">
+            <a title="给我发邮件" href="mailto:648901734@qq.comm">648901734@qq.com</a>
+          </td>
         </tr>
         <tr>
           <td class="item-title">性别：</td>
           <td class="item-content">男</td>
           <td class="item-title">出生日期：</td>
-          <td class="item-content">1990年11月15日</td>
+          <td class="item-content">1990.11</td>
+        </tr>
+        <tr>
+          <td class="item-title">博客:</td>
+          <td class="item-content" colspan="3">
+            <a title="看看我的博客" href="http://www.cnblogs.com/bb3q/" target="_blank">http://www.cnblogs.com/bb3q/</a>
+          </td>
         </tr>
          </table>
-         <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:75px;   HEIGHT:110px; width:12%;">
-        <img src="images/zlb.png" width="105px" height="120px" />
+         <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:115px;   HEIGHT:135px; width:12%;">
+        <img src="images/zlb.png" width="105px" height="130px" />
         </div>
       </section>
 
