--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td  style="padding:2px 0px;width:150px;font-weight:500;">2015.06~2016.07</td>
-            <td  style="padding:2px 0px;width:400px;font-weight:500;">&nbsp&nbsp北京甲骨文股份有限公司</td>
-            <td  style="padding:2px 0px;width:300px;font-weight:500;">&nbsp&nbspSeibel研发部</td>
-            <td  style="padding:2px 0px;width:300px;font-weight:500;">java后端工程师</td>
+            <td  style="padding:2px 0px;width:150px;font-weight:900;">2015.06~2016.07</td>
+            <td  style="padding:2px 0px;width:400px;font-weight:900;">&nbsp&nbsp北京甲骨文股份有限公司</td>
+            <td  style="padding:2px 0px;width:300px;font-weight:900;">&nbsp&nbspSeibel研发部</td>
+            <td  style="padding:2px 0px;width:300px;font-weight:900;">java后端工程师</td>
           </tr>
        </table>
       <table style="margin-bottom:10px; ">
@@ -279,13 +279,12 @@ q:before, q:after {
             <td class="item-content">Struts2、Spring、JavaScript、CSS、Ajax、jQuery、velocity、jsp</td>
           </tr>
           <tr>
-            <td class="project-sub-title" valign="top">项目收获:</td>
+            <td class="project-sub-title" valign="top">工作内容:</td>
             <td class="item-content">
-              通过在甲骨文实习工作一年，了解并深入甲骨文Siebel Team项目（Billing Insight）的相关逻辑，
-              包括项目中企业框架struts，spring的相关应用，通过对首页JSP结构的重新调整及UI的重新设计
-              ，使产品首页在易用性得到极大提高，对JavaScript和CSS代码重写，提高的程序运行效率及浏览器兼容性
-              。完成“Payment”模块相关功能开发，包括struts配置，action调用，字段输入验证，拦截器处理等，
-              平时日常工作负责debug各个模块出现的bug，对自己分析并解决问题的能力有很大提升。
+              1）根据PM需求重构“Payment”模块相关页面
+              2）完成"One Time"支付功能，包括struts配置，action调用，JSP结构，字段输入验证，拦截器处理等
+              3）平时日常工作负责debug各个模块出现的bug
+              4）公司"ADA"盲人读写先关JS的修改
             </td>
           </tr>
         </table>
