--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">工作内容:</td>
             <td class="item-content">  
-          <b>·</b>根据PM需求重构“Payment”模块相关页面
-          <b>·</b>完成"One Time"支付功能，包括struts配置，action调用，JSP结构，字段输入验证，拦截器处理等
-          <b>·</b>平时日常工作负责debug各个模块出现的bug
-          <b>·</b>公司"ADA"盲人读写先关JS的修改
+          <b>.</b>根据PM需求重构“Payment”模块相关页面<br/>
+          <b>·</b>完成"One Time"支付功能，包括struts配置，action调用，JSP结构，字段输入验证，拦截器处理等<br/>
+          <b>·</b>平时日常工作负责debug各个模块出现的bug<br/>
+          <b>·</b>公司"ADA"盲人读写先关JS的修改<br/>
             </td>
           </tr>
         </table>
