--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       font-size:20px;
       padding:4px;
       font-family:Georgia;
+      font-weight: 800；
     }
     .project-title{
       font-size:20px;
@@ -281,7 +282,7 @@ q:before, q:after {
             <td class="project-sub-title" valign="top">工作内容:</td>
             <td class="item-content">  
           <b>★</b>&nbsp&nbsp根据PM需求重构“Payment”模块相关页面<br/>
-          <b>★</b>&nbsp&nbsp完成"One Time"支付功能，包括struts配置，action调用，JSP结构，字段输入验证，拦截器处理等<br/>
+          <b>★</b>&nbsp&nbsp完成"One Time"支付功能，包括struts配置，action调用，JSP结构，字段输入验证，拦截器处理<br/>
           <b>★</b>&nbsp&nbsp平时日常工作负责debug各个模块出现的bug<br/>
           <b>★</b>&nbsp&nbsp公司"ADA"盲人读写先关JS的修改<br/>
             </td>
