--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       width:100px;
       padding:4px;
       line-height: 1.8;
-      font-weight: 800；
+      font-weight: bold；
     }
     .item-content{
       padding:4px;
@@ -45,19 +45,19 @@
       font-size:20px;
       padding:4px;
       font-family:Georgia;
-      font-weight: 800；
+      font-weight: bold；
     }
     .project-title{
       font-size:20px;
       line-height: 1.8;
       padding:2px;
-      font-weight: 800；
+      font-weight: bold；
     }
     .project-sub-title{
       padding:4px;
       line-height: 1.8;
       width:70px;
-      font-weight: 800；
+      font-weight: bold；
     }
     #goTop{
       position:fixed;
@@ -237,18 +237,18 @@ q:before, q:after {
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;font-weight:800;">2014.09~2017.06</td>
-            <td style="width:250px;font-weight:800;">中南大学（985工程）</td>
-            <td style="width:300px;font-weight:800;">软件工程</td>
-            <td style="width:350px;font-weight:800;">硕士在读</td>
+            <td style="width:150px;font-weight:bold;">2014.09~2017.06</td>
+            <td style="width:250px;font-weight:bold;">中南大学（985工程）</td>
+            <td style="width:300px;font-weight:bold;">软件工程</td>
+            <td style="width:350px;font-weight:bold;">硕士在读</td>
           </tr>
         </table>
         <table>
           <tr>
-            <td style="width:150px;font-weight:800;">2009.09~2013.06</td>
-            <td style="width:250px;font-weight:800;">湘南学院</td>
-            <td style="width:300px;font-weight:800;">&nbsp&nbsp电气工程自动化</td>
-            <td style="width:350px;font-weight:800;">&nbsp学士学位</td>
+            <td style="width:150px;font-weight:bold;">2009.09~2013.06</td>
+            <td style="width:250px;font-weight:bold;">湘南学院</td>
+            <td style="width:300px;font-weight:bold;">&nbsp&nbsp电气工程自动化</td>
+            <td style="width:350px;font-weight:bold;">&nbsp学士学位</td>
           </tr>
         </table>
       </section>
