--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       width:100px;
       padding:4px;
       line-height: 1.8;
-      font-weight: bold；
+      font-weight: bolder；
     }
     .item-content{
       padding:4px;
@@ -45,19 +45,19 @@
       font-size:20px;
       padding:4px;
       font-family:Georgia;
-      font-weight: bold；
+      font-weight: bolder；
     }
     .project-title{
       font-size:20px;
       line-height: 1.8;
       padding:2px;
-      font-weight: bold；
+      font-weight: bolder；
     }
     .project-sub-title{
       padding:4px;
       line-height: 1.8;
       width:70px;
-      font-weight: bold；
+      font-weight: bolder；
     }
     #goTop{
       position:fixed;
@@ -188,14 +188,14 @@ q:before, q:after {
           <td class="item-content">13161231694</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
-            <a title="给我发邮件" href="mailto:648901734@qq.comm">648901734@qq.com</a>
+            648901734@qq.com
           </td>
         </tr>
         <tr>
           <td class="item-title">性别：</td>
           <td class="item-content">男</td>
           <td class="item-title">出生日期：</td>
-          <td class="item-content">1990.11</td>
+          <td class="item-content">1990年11月15日</td>
         </tr>
         <tr>
           <td class="item-title">博客:</td>
@@ -237,18 +237,18 @@ q:before, q:after {
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;font-weight:bold;">2014.09~2017.06</td>
-            <td style="width:250px;font-weight:bold;">中南大学（985工程）</td>
-            <td style="width:300px;font-weight:bold;">软件工程</td>
-            <td style="width:350px;font-weight:bold;">硕士在读</td>
+            <td style="width:150px;font-weight:bolder;">2014.09~2017.06</td>
+            <td style="width:250px;font-weight:bolder;">中南大学（985工程）</td>
+            <td style="width:300px;font-weight:bolder;">软件工程</td>
+            <td style="width:350px;font-weight:bolder;">硕士在读</td>
           </tr>
         </table>
         <table>
           <tr>
-            <td style="width:150px;font-weight:bold;">2009.09~2013.06</td>
-            <td style="width:250px;font-weight:bold;">湘南学院</td>
-            <td style="width:300px;font-weight:bold;">&nbsp&nbsp电气工程自动化</td>
-            <td style="width:350px;font-weight:bold;">&nbsp学士学位</td>
+            <td style="width:150px;font-weight:bolder;">2009.09~2013.06</td>
+            <td style="width:250px;font-weight:bolder;">湘南学院</td>
+            <td style="width:300px;font-weight:bolder;">&nbsp&nbsp电气工程自动化</td>
+            <td style="width:350px;font-weight:bolder;">&nbsp学士学位</td>
           </tr>
         </table>
       </section>
