--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       width:100px;
       padding:4px;
       line-height: 1.8;
-      font-weight: bolder；
+      font-weight: 900；
     }
     .item-content{
       padding:4px;
@@ -45,19 +45,19 @@
       font-size:20px;
       padding:4px;
       font-family:Georgia;
-      font-weight: bolder；
+      font-weight: 900；
     }
     .project-title{
       font-size:20px;
       line-height: 1.8;
       padding:2px;
-      font-weight: bolder；
+      font-weight: 900；
     }
     .project-sub-title{
       padding:4px;
       line-height: 1.8;
       width:70px;
-      font-weight: bolder；
+      font-weight: 900；
     }
     #goTop{
       position:fixed;
