--- a/index.html
+++ b/index.html
@@ -237,18 +237,18 @@ q:before, q:after {
       <section class="item-box-right" style="margin-bottom:10px;">
         <table>
           <tr>
-            <td style="width:150px;font-weight:bolder;">2014.09~2017.06</td>
-            <td style="width:250px;font-weight:bolder;">中南大学（985工程）</td>
-            <td style="width:300px;font-weight:bolder;">软件工程</td>
-            <td style="width:350px;font-weight:bolder;">硕士在读</td>
+            <td style="width:150px;font-weight:900;">2014.09~2017.06</td>
+            <td style="width:250px;font-weight:900;">中南大学（985工程）</td>
+            <td style="width:300px;font-weight:900;">软件工程</td>
+            <td style="width:350px;font-weight:900;">硕士在读</td>
           </tr>
         </table>
         <table>
           <tr>
-            <td style="width:150px;font-weight:bolder;">2009.09~2013.06</td>
-            <td style="width:250px;font-weight:bolder;">湘南学院</td>
-            <td style="width:300px;font-weight:bolder;">&nbsp&nbsp电气工程自动化</td>
-            <td style="width:350px;font-weight:bolder;">&nbsp学士学位</td>
+            <td style="width:150px;font-weight:900;">2009.09~2013.06</td>
+            <td style="width:250px;font-weight:900;">湘南学院</td>
+            <td style="width:300px;font-weight:900;">&nbsp&nbsp电气工程自动化</td>
+            <td style="width:350px;font-weight:900;">&nbsp学士学位</td>
           </tr>
         </table>
       </section>
@@ -260,10 +260,10 @@ q:before, q:after {
       <section class="item-box-right">
         <table>
           <tr>
-            <td  style="padding:2px 0px;width:150px;font-weight:800;">2015.06~2016.07</td>
-            <td  style="padding:2px 0px;width:400px;font-weight:800;">&nbsp&nbsp北京甲骨文股份有限公司</td>
-            <td  style="padding:2px 0px;width:300px;font-weight:800;">&nbsp&nbspSeibel研发部</td>
-            <td  style="padding:2px 0px;width:300px;font-weight:800;">java后端工程师</td>
+            <td  style="padding:2px 0px;width:150px;font-weight:900;">2015.06~2016.07</td>
+            <td  style="padding:2px 0px;width:400px;font-weight:900;">&nbsp&nbsp北京甲骨文股份有限公司</td>
+            <td  style="padding:2px 0px;width:300px;font-weight:900;">&nbsp&nbspSeibel研发部</td>
+            <td  style="padding:2px 0px;width:300px;font-weight:900;">java后端工程师</td>
           </tr>
        </table>
       <table style="margin-bottom:10px; ">
