--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ q:before, q:after {
         </tr>
         <tr>
           <td class="item-title">电话号码：</td>
-          <td class="item-content">13161231694</td>
+          <td class="item-content">131-6123-1694</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
             648901734@qq.com
