--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ q:before, q:after {
           <td class="item-content">131-6123-1694</td>
           <td class="item-title">邮箱：</td>
           <td class="item-content">
-            648901734@qq.com
+           <a title="给我发邮件" href="mailto:648901734@qq.comm">648901734@qq.com</a>
           </td>
         </tr>
         <tr>
