--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ q:before, q:after {
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
              项目分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块,
-             “Dashboard”展示账户花费趋势、预算及账户付款记录，“Unbilled”账户相关数据使用记录，“Statement”相关服务详细清单等，“My Account”展示各类report信息，
+             “Dashboard”展示用户账户花费趋势、预算及账户付款记录，“Unbilled”用户账户相关数据使用记录，“Statement”用户的相关服务详细清单等，“My Account”展示各类report信息，
              “Payment”完成相关账户支付功能，“Hierarchy”可构建个人或公司组织群体，“My Account”账户和个人或公司信息。
             </td>
           </tr>
@@ -285,7 +285,7 @@ q:before, q:after {
           <b>★</b>&nbsp&nbsp根据PM需求重构“Payment”模块相关页面<br/>
           <b>★</b>&nbsp&nbsp完成"One Time"支付功能，包括struts配置，action调用，字段输入验证，拦截器处理<br/>
           <b>★</b>&nbsp&nbsp平时日常工作负责debug各个模块出现的bug<br/>
-          <b>★</b>&nbsp&nbsp公司"ADA"盲人读写先关JS的修改<br/>
+          <b>★</b>&nbsp&nbsp公司"ADA"盲人读写相关JS的修改<br/>
             </td>
           </tr>
         </table>
