--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ q:before, q:after {
               ”用户管理”主要是对”用户的信息、资料”的管理和操作；
               ”企业管理”主要包括对”企业的信息”的相关操作；
               ”产品管理”主要是对“产品的展示”相关操作；
-              ”网站管理”主要是网站平台业务的的一些相关操作，包括添加，删除“新闻”、“公共文档”等。
+              ”网站管理”主要是网站平台业务的的一些相关操作，包括添加、删除“新闻”、“公共文档”等。
             </td>
           </tr>
           <tr>
