--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ q:before, q:after {
           <tr>
             <td class="project-sub-title" valign="top">项目描述:</td>
             <td class="item-content">
-             项目分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块,
+             Oracle Billing Insight项目分为“Dashboard”、“Unbilled”、“Statement”、“Analytics”、“Payment”、“Hierarchy”、“My Account”七大模块,
              “Dashboard”展示用户账户花费趋势、预算及账户付款记录，“Unbilled”用户账户相关数据使用记录，“Statement”用户的相关服务详细清单等，“My Account”展示各类report信息，
              “Payment”完成相关账户支付功能，“Hierarchy”可构建个人或公司组织群体，“My Account”账户和个人或公司信息。
             </td>
@@ -318,7 +318,7 @@ q:before, q:after {
             <td class="item-content">Spring MVC、MySQL、JavaScript、CSS、Ajax、jQuery、HTML5</td>
           </tr>
           <tr>
-            <td class="project-sub-title" valign="top">项目收获:</td>
+            <td class="project-sub-title" valign="top">项目职责:</td>
             <td class="item-content">
               参与了项目需求分析，数据设计及代码编写与测试工作，
               使用框架SpringMvc，数据的增删改及显示与页面的交互，做了用户模块及其产品模块，
@@ -346,7 +346,7 @@ q:before, q:after {
             <td class="item-content">JavaScript、CSS、Ajax、jQuery、Java EE(Struts、Hibernate、Spring)、html5</td>
           </tr>
           <tr>
-            <td class="project-sub-title" valign="top">项目收获:</td>
+            <td class="project-sub-title" valign="top">项目职责:</td>
             <td class="item-content">
               担任组长，参与了项目需求分析，数据库设计，构建产品ER图及代码编写与测试工作，小组7人独立完成项目开发，
               本人担任“用户管理”，“标签搜索”模块功能的设计及代码编写，
