--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ q:before, q:after {
   <header>
     <h1 style="color:#e8e8e8; font-size: 40px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:2px;">赵立波</h1>
     <section style="padding:2px 0px;">
-      <hr/>
+      <img src="images/zlb.png" width="105px" height="130px" />
     </section>
   </header>
   <article style="padding:10px 0px;">
