--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ q:before, q:after {
   <header>
     <h1 style="color:#e8e8e8; font-size: 40px; font-weight:bold;text-align:left;text-shadow: 2px 2px 2px #333, 0px 0px 5px #666; margin-top:2px;">赵立波</h1>
     <section style="padding:2px 0px;">
-      <img src="images/zlb.png" width="105px" height="130px" />
+       <hr/>
     </section>
   </header>
   <article style="padding:10px 0px;">
@@ -207,7 +207,7 @@ q:before, q:after {
         </tr>
          </table>
          <div   id="image"   style="POSITION:absolute;LEFT:80%;   VISIBILITY:visible;TOP:80px;   HEIGHT:135px; width:12%;">
-        
+        <img src="images/zlb.png" width="105px" height="130px" />
         </div>
       </section>
 
@@ -385,7 +385,14 @@ q:before, q:after {
         </ul>
       </section>
     </section>
-
+         <section class="item-wrap" style="border:0;">
+ -      <section class="item-box-left">
+ -        <span class="item-title-hl">兴趣爱好</span>
+ -      </section>
+ -      <section class="item-box-right">
+ -        逛博客、github等相关技术平台分享、篮球
+ -      </section>
+ -    </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
       <section style="background-image:url(images/icons/Button-Up-01.png); width:32px;height:32px;"></section>
       <section class="reflect"></section>
