--- a/index.html
+++ b/index.html
@@ -283,11 +283,9 @@ q:before, q:after {
           </tr>
           <tr>
             <td class="project-sub-title" valign="top">工作内容:</td>
-            <td class="item-content">  
-          <b>★</b>&nbsp&nbsp根据PM需求重构“Payment”模块相关页面<br/>
-          <b>★</b>&nbsp&nbsp完成"One Time"支付功能，包括struts配置，action调用，字段输入验证，拦截器处理<br/>
-          <b>★</b>&nbsp&nbsp平时日常工作负责debug各个模块出现的bug<br/>
-          <b>★</b>&nbsp&nbsp公司"ADA"盲人读写相关JS的修改<br/>
+            <td class="item-content">
+              参与网站模块的设计、开发、测试、修改bug等工作，包括业务需求的沟通，功能模块详细设计，业务功能实现与单元测试，系统维护；
+              参与产品构思和架构设计；撰写相关的技术文档；辅助leader进行承担部分新技术研究。
             </td>
           </tr>
         </table>
