--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ q:before, q:after {
        <span class="item-title-hl">兴趣爱好</span>
        </section>
      <section class="item-box-right">
-       逛博客、github等相关技术平台分享、篮球
+       热衷于CSDN博客、github等相关技术平台分享、喜欢与技术大牛交流想法
       </section>
     </section>
     <aside id="wrap" style="position:fixed; bottom:100px; right:100px;display:none; opacity:0.5;">
