--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ q:before, q:after {
           <td class="item-content">物联网工程实验室</td>
           <td class="item-title">博客:</td>
           <td class="item-content" colspan="3">
-            <a title="看看我的博客" href="https://github.com/Alanbobo" target="_blank">http://www.cnblogs.com/bb3q/</a>
+            <a title="看看我的博客" href="https://github.com/Alanbobo" target="_blank">https://github.com/Alanbobo</a>
           </td>
         </tr>
          </table>
